# RawPhotoForge

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  README_Japanese.md  about.toml  decision-log.md  index.html  rust_licenses.html
.github/workflows/: build.yml  release.yml
python-legacy/: README.md
python-legacy/raw_image_editor/: slang_kernel.slang
python-legacy/raw_photo_forge/: settings.json
raw_image_editor/: __init__.py  base.py  editor.py  numpy_backend.py  opencl_backend.py  opencl_kernel.cl  slang_kernel.slang  wgpu_kernel.wgsl
raw_photo_forge/: languages.json  raw_photo_forge.py  requirements.txt  settings.json
rust/: Cargo.toml  about.toml  build.sh  rust_licenses.html
rust-godot-legacy/: Cargo.toml  README.md  README_Japanese.md  about.toml  build.sh  rust_licenses.html
rust-godot-legacy/photo-editor/: Cargo.toml
rust-godot-legacy/photo-editor-godot/: Cargo.toml
rust-godot-legacy/photo-editor-test/: Cargo.toml
rust-godot-legacy/photo-editor/src/: image.rs
rust-godot-legacy/raw-photo-forge/: control.tres  main.gd  project.godot  settings_window.gd  tone_curve_canvas.gd.uid  tone_curve_editor.gd  tone_curve_input_catcher.gd
rust/photo-editor/: Cargo.toml
rust/photo-editor-godot/: Cargo.toml
rust/photo-editor-test/: Cargo.toml
rust/photo-editor-web/: Cargo.toml
rust/photo-editor-web/src/: lib.rs
rust/photo-editor/src/: errors.rs  gpu_image_processing.rs  image.rs  interpolation.rs  lib.rs  metadata.rs  wgpu_shader.wgsl
rust/raw-photo-forge/: RawPhotoForge.sln  control.tscn  export_presets.cfg  icon.svg.import  main.gd  main.gd.uid  project.godot  settings_window.gd  settings_window.gd.uid  settings_window.tscn  tone_curve_canvas.gd  tone_curve_editor.gd.uid  tone_curve_editor.tscn  tone_curve_input_catcher.gd.uid
web/: build.ts  dev.ts  index.html  main.ts  package-lock.json  package.json  style.css  tone_curve_editor.ts  tsconfig.json  vite.config.ts
web-ts/: deno.json  main.ts  style.css  tone_curve_editor.ts
(+30 files in other folders)
