[package]
name = "photo-editor-web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
photo-editor = { path = "../photo-editor" }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
ndarray = "0.17.2"
js-sys = "0.3"
web-sys = "0.3"

console_error_panic_hook = "0.1"