[package]
name = "photo-editor"
version = "0.1.0"
edition = "2021"


[dependencies]

image = { version = "0.25.10", default-features = false, features = [
    "png",
    "jpeg",
    "tiff",
    "webp"

] }
kamadak-exif = "0.6.1"
ndarray = "0.17.2"
thiserror = "2.0.18"
wgpu = "29.0.3"
bytemuck = { version = "1.25.0", features = ["derive"] }
futures = "0.3.32"
num-traits = "0.2.19"
once_cell = "1.21.4"
serde_json = "1.0.150"

[build-dependencies]
fs_extra = "1.3.0"
glob = "0.3.3"
